bk_ida/gccida/c1/canon_reg
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/canon_reg/src/cse.c:3290:55: error: expected ')'
if ( rtuint != cached_regno || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                                                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/canon_reg/src/cse.c:3290:32: note: to match this '('
if ( rtuint != cached_regno || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/canon_reg/src/cse.c:3290:78: error: expected expression
if ( rtuint != cached_regno || (  struct cse_reg_info = cached_cse_reg_info) == 0LL ) 
                                                                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/canon_reg/src/cse.c:3291:2: error: expected expression
 struct cse_reg_info = get_cse_reg_info( rtuint); 
 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/canon_reg/src/cse.c:3336:19: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
if ( rtint < 0 || insn_data_0[rtint].n_dups > 0 ) 
                  ^~~~~~~~~~~
                  insn_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/canon_reg/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/canon_reg/src/obj/cse.o] Error 1
